# framework-testing

./: README.md  pyproject.toml
fastapi/: main.py
fastapi/data/: AirPassengers.parquet
fastapi/static/: scripts.js  styles.css
fastapi/templates/: index.html
streamlit/: app.py
streamlit/data/: example.csv
