[project]
name = "fastapi-html"
version = "0.1.0"
description = "Simple Forecasting App using FastApi and basic html templating"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scikit-learn>=1.5.2",
    "statsforecast>=1.7.8",
    "streamlit>=1.38.0",
    "uvicorn>=0.30.6",
]
